# src

./: .bazelignore  .bazeliskrc  .bazelrc  .clang-format  .clang-format-ignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  Cargo.toml  LICENSE.txt  MODULE.bazel  README.md  REPO.bazel  al.lua  al.yaml  al_lib.lua  check.toml  gazelle_python.yaml  go.mod  go.sum  go.work  go.work.sum  maven-install.json  maven-lock.json  opencode.json  package.json  packages.txt  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  stylua.toml  taplo.toml  tsconfig.json
.github/: BUILD.bazel  README.md  _index.md
.github/workflows/: README.md  build.yaml
ansible/: BUILD.bazel  README.md  ansible.cfg  deps.MODULE.bazel  inventory.yaml  requirements.txt
ansible/collections/: BUILD.bazel
ansible/group_vars/: BUILD.bazel  all.yaml  rancher1.yaml
ansible/host_vars/: BUILD.bazel  pi1.dc1.alwaldend.com.yaml
ansible/playbooks/: BUILD.bazel  README.md  cluster02.yml  dns.yaml  facts.yml  laptop01_setup.yaml  phone.yaml  template_vm.yaml  wireguard-keys.yml
ansible/roles/: BUILD.bazel
bzl/: BUILD.bazel  README.md  bzl.MODULE.bazel  deps.MODULE.bazel
bzl/aspects/: BUILD.bazel  README.md  al_print_deps.bzl  al_toml_validate.bzl
bzl/build-files/: BUILD.general.bazel  BUILD.openssl.bazel
bzl/build_files/: README.md  general.BUILD.bazel
bzl/configs/: BUILD.bazel  README.md
bzl/extensions/: BUILD.bazel  README.md  al_go_repository.bzl  al_repo_map.bzl  al_shellcheck.bzl
bzl/macros/: BUILD.bazel  README.md  al-template-files.bzl  al-toml-data.bzl  al_alias_map.bzl  al_bzl_library.bzl  al_bzl_library_map.bzl  al_bzl_target_doc.bzl  al_combine_files.bzl  al_compile_pip_requirements_combined.bzl  al_drawio_run_binary.bzl  al_gen_changelog.bzl  al_gen_leetcode_submissions.bzl  al_genquery_write_to_source_file.bzl  al_genrule.bzl  al_genrule_src.bzl  al_genrule_with_wheels.bzl  al_go_checkers.bzl  al_install_file.bzl  al_lua_library.bzl  al_md_data.bzl  al_pkg_tar_combined.bzl  al_py_binary_shell.bzl  al_py_checker.bzl  al_py_checkers.bzl  al_py_flake8.bzl  al_readme.bzl  al_run_tool.bzl  al_sh_library.bzl  al_template_files.bzl  al_toml_data.bzl  al_txt_data.bzl  al_vial_configs.bzl  defs.bzl
bzl/package_groups/: BUILD.bazel  README.md
bzl/providers/: BUILD.bazel  README.md  al_git_info.bzl  al_hugo_module_info.bzl  al_hugo_site_info.bzl  al_hugo_theme_info.bzl  al_toml_info.bzl
bzl/qt/: BUILD.bazel  README.md  al_current_qt_toolchain.bzl  defs.bzl  requirements.txt
bzl/registry/: README.md
bzl/rules/: BUILD.bazel  README.md  al-template-files.bzl  al_drawio_diagram.bzl  al_drawio_run_binary.bzl  al_gen_clang_format.bzl  al_genrule.bzl  al_git_binary.bzl  al_git_library.bzl  al_hugo_binary.bzl  al_hugo_build.bzl  al_hugo_module.bzl  al_hugo_run_binary.bzl  al_hugo_serve.bzl  al_hugo_site.bzl  al_hugo_site_binary.bzl  al_hugo_site_run_binary.bzl  al_hugo_theme.bzl  al_remove_directories.bzl  al_toml_data.bzl  al_write_script.bzl  defs.bzl
bzl/toolchain-types/: BUILD.bazel  README.md
bzl/toolchains/: BUILD.bazel  README.md  al_current_qt_toolchain.bzl  al_drawio_toolchain.bzl  al_git_resolved_toolchain.bzl  al_hugo_toolchain.bzl  al_preinstalled_qt_toolchain.bzl  al_qt_resolved_toolchain.bzl  al_resolved_toolchain.bzl  al_shellcheck_toolchain.bzl  requirements.txt
bzl/vars/: BUILD.bazel  README.md  al_bzl_libs.bzl  al_readmes.bzl  bzl_libs.bzl  labels.bzl  readmes.bzl  toolchain_types.bzl  vars.bzl
cpp/: README.md  deps.MODULE.bazel
cpp/infinitime/: BUILD.bazel  README.md  mcuboot-requirements-lock.txt  requirements-lock.txt  requirements.txt
cpp/leetcode-submissions/: 00001-1096529439-two-sum.cpp  00001-1096529439-two-sum.json  00020-1096533219-valid-parentheses.cpp  00020-1096533219-valid-parentheses.json  00094-1116406709-binary-tree-inorder-traversal.json  00094-1116406973-binary-tree-inorder-traversal.json  00144-1102668286-binary-tree-preorder-traversal.cpp  00144-1102668286-binary-tree-preorder-traversal.json  00144-1102669287-binary-tree-preorder-traversal.cpp  00144-1102669287-binary-tree-preorder-traversal.json  00144-1102670067-binary-tree-preorder-traversal.cpp  00144-1102670067-binary-tree-preorder-traversal.json  00145-1102672996-binary-tree-postorder-traversal.cpp  00145-1102672996-binary-tree-postorder-traversal.json  00145-1102673844-binary-tree-postorder-traversal.cpp  00145-1102673844-binary-tree-postorder-traversal.json  00151-1096525336-reverse-words-in-a-string.cpp  00151-1096525336-reverse-words-in-a-string.json  00171-1102790598-excel-sheet-column-number.cpp  00171-1102790598-excel-sheet-column-number.json  00191-1108769382-number-of-1-bits.cpp  00191-1108769382-number-of-1-bits.json  00203-1096538732-remove-linked-list-elements.cpp  00203-1096538732-remove-linked-list-elements.json  00203-1096538815-remove-linked-list-elements.cpp  00203-1096538815-remove-linked-list-elements.json  00206-1096520085-reverse-linked-list.cpp  00206-1096520085-reverse-linked-list.json  00215-1100039261-kth-largest-element-in-an-array.json  00225-1095927384-implement-stack-using-queues.cpp  00225-1095927384-implement-stack-using-queues.json  (+117 more)
dnscontrol/: BUILD.bazel  README.md
dnscontrol/dns/: BUILD.bazel  (+2 more)
go/: BUILD.bazel  README.md  deps.MODULE.bazel  go.MODULE.bazel  go.mod
helm/: BUILD.bazel  README.md  deps.MODULE.bazel
hs/: README.md  deps.MODULE.bazel  stackage_snapshot.json
hugo/: BUILD.bazel  README.md  deps.MODULE.bazel
infra/: BUILD.bazel  README.md  al_lib.lua  ansible.cfg  deps.MODULE.bazel
java/: README.md  deps.MODULE.bazel  java.MODULE.bazel  maven_lock.json
js/: BUILD.bazel  README.md  deps.MODULE.bazel
kt/: BUILD.bazel  README.md  deps.MODULE.bazel  kt.MODULE.bazel
lua/: BUILD.bazel  README.md
perl/: BUILD.bazel  cpanfile.snapshot.lock.json
pl/: BUILD.bazel  README.md  cpanfile  cpanfile.snapshot  deps.MODULE.bazel
projects/: BUILD.bazel  README.md
py/: BUILD.bazel  README.md  deps.MODULE.bazel  gazelle_python.yaml  py.MODULE.bazel  requirements.txt
(+7170 files in other folders)
