load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@com_alwaldend_src_npm//:defs.bzl", "npm_link_all_packages")
load("@com_alwaldend_src_pip//:requirements.bzl", "all_whl_requirements")
load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python_gazelle_plugin//manifest:defs.bzl", "gazelle_python_manifest")
load("@rules_python_gazelle_plugin//modules_mapping:def.bzl", "modules_mapping")
load("@tools_com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")
load("//tools/docs/main/bzl:al_docs_files.bzl", "al_docs_files")
load("//tools/md/main/bzl:al_md_data.bzl", "al_md_data")
load("//tools/toml/main/bzl:al_toml_data.bzl", "al_toml_data")
load("//tools/txt/main/bzl:al_txt_data.bzl", "al_txt_data")

al_docs_files(
    name = "docs",
    srcs = [":LICENSE.txt"],
    renames = {},
    visibility = ["//projects/alwaldend.com:__pkg__"],
    deps = [
        "//infra:docs",
        "//projects:docs",
        "//tools:docs",
    ],
)

exports_files(
    ["LICENSE.txt"],
    visibility = ["//:__subpackages__"],
)

pkg_files(
    name = "license_files",
    srcs = ["LICENSE.txt"],
    visibility = ["//:__subpackages__"],
)

npm_link_all_packages(
    name = "node_modules",
)

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    modules_mapping = ":modules_map",
    pip_repository_name = "com_alwaldend_src_pip",
    requirements = "//:requirements.txt",
    visibility = ["//:__subpackages__"],
)

modules_mapping(
    name = "modules_map",
    include_stub_packages = True,
    wheels = all_whl_requirements,
)

compile_pip_requirements(
    name = "requirements",
    size = "large",
    srcs = [":pyproject"],
    extra_args = ["--no-strip-extras"],
    requirements_txt = ":requirements.txt",
)

al_txt_data(
    name = "editorconfig",
    srcs = [".editorconfig"],
    visibility = ["//:__subpackages__"],
)

al_toml_data(
    name = "pyproject",
    srcs = ["pyproject.toml"],
    visibility = ["//:__subpackages__"],
)

buildifier(
    name = "buildifier",
    visibility = ["//:__subpackages__"],
)

buildifier_test(
    name = "buildifier_test",
    size = "small",
    no_sandbox = True,
    workspace = "//:BUILD.bazel",
)

# gazelle:python_generate_proto true
# gazelle:python_library_naming_convention $package_name$_lib
# gazelle:python_binary_naming_convention $package_name$

# gazelle:java_maven_install_file projects/nexus_security_plugin/maven_lock.json
# gazelle:resolve java javax.annotation @com_alwaldend_src_maven//:org_apache_tomcat_annotations_api
# gazelle:resolve java org.joda.time @com_alwaldend_src_maven//:joda_time_joda_time
# gazelle:resolve java org.joda.time.format @com_alwandend_src_maven//:joda_time_joda_time
# gazelle:resolve java org.sonatype.nexus.repository.view @com_alwandend_src_maven//:org_sonatype_nexus_nexus_repository
# gazelle:resolve java org.sonatype.nexus.repository.storage @com_alwaldend_src_maven//:org_sonatype_nexus_nexus_repository

# gazelle:exclude **/leetcode-submissions/**
# gazelle:exclude **/mod_tidy_fix.go
# gazelle:exclude **/go_mod_tidy_fix.go

gazelle(
    name = "gazelle",
    command = "fix",
    gazelle = ":gazelle_bin",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@contrib_rules_jvm//java/gazelle",
        "@rules_python_gazelle_plugin//python:python",
    ],
    visibility = ["//:__subpackages__"],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//projects/sri/main/c/...": "",
    },
)
