module(
    name = "com_alwaldend_src",
    version = "0.0.0",
    bazel_compatibility = [">=8.5.1"],
    compatibility_level = 0,
)

# Bzl
bazel_dep(name = "stardoc", version = "0.8.0")
bazel_dep(name = "bazel_features", version = "1.39.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")

# Python
bazel_dep(name = "rules_python", version = "1.8.2")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.8.2")

# Proto
bazel_dep(name = "protobuf", version = "33.4")

# Shell
bazel_dep(name = "rules_sh", version = "0.5.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# Golang
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Perl
bazel_dep(name = "rules_perl")

# Javascript
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "aspect_rules_js", version = "2.8.3")

# Rust
bazel_dep(name = "rules_rust", version = "0.68.1")

# Java
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")

# C, C++
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
bazel_dep(name = "org_openssl_openssl", version = "3.5.0")
bazel_dep(name = "us_nasm_nasm", version = "2.15.05")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

# Kotlin
bazel_dep(name = "rules_kotlin", version = "2.2.2")

# Andoird
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "rules_android_ndk", version = "0.1.3")
bazel_dep(name = "rules_robolectric", version = "4.16.1")

# Oci
bazel_dep(name = "rules_oci", version = "2.2.7")

# Hashell
bazel_dep(name = "rules_haskell")

# Tools
bazel_dep(name = "com_github_georgewfraser_java_language_server", version = "2025.520.0")
bazel_dep(name = "com_alwaldend_com_github_infinitimeorg_infinitime")

## Overrides

git_override(
    module_name = "com_alwaldend_com_github_infinitimeorg_infinitime",
    commit = "aa96f678cca82174c27b2451d32c3aef10571445",
    init_submodules = True,
    recursive_init_submodules = True,
    remote = "https://github.com/alwaldend/com_github_infinitimeorg_infinitime.git",
    shallow_since = "1733253068 +0100",
)

# local_path_override(
#     module_name = "com_alwaldend_com_github_infinitimeorg_infinitime",
#     path = "../com_github_infinitimeorg_infinitime",
# )

git_override(
    module_name = "contrib_rules_jvm",
    commit = "1a5301c33cb579042edafc1de6e98bf5ecc49840",
    remote = "https://github.com/bazel-contrib/rules_jvm.git",
)

archive_override(
    module_name = "hedron_compile_commands",
    integrity = "sha256-7B5Bk1jrI9rqsN0CBt/JMDFrrJ3pQtlOuCAZ9AICKEc=",
    strip_prefix = "bazel-compile-commands-extractor-abb61a688167623088f8768cc9264798df6a9d10",
    urls = ["https://github.com/hedronvision/bazel-compile-commands-extractor/archive/abb61a688167623088f8768cc9264798df6a9d10.zip"],
)

# archive_override(
#     module_name = "toolchains_llvm",
#     integrity = "sha256-OjRqrxfgbiQHfzKs0xBX8tEIi32EvhNd8msVJNT3V+w=",
#     strip_prefix = "toolchains_llvm-80a885d35da3cd037d1625414d5527dd40603885",
#     urls = ["https://github.com/bazel-contrib/toolchains_llvm/archive/80a885d35da3cd037d1625414d5527dd40603885.zip"],
# )

archive_override(
    module_name = "rules_cc",
    integrity = "sha256-HDleSW48YJZBGkxkoh9Ox8gCW+TjCQPsfHVBwIbL0Yg=",
    strip_prefix = "rules_cc-b1b5ca05c15c27c03946e7b11a9617cfd2a0fa0a",
    urls = ["https://github.com/bazelbuild/rules_cc/archive/b1b5ca05c15c27c03946e7b11a9617cfd2a0fa0a.zip"],
)

# archive_override(
#     module_name = "rules_haskell",
#     integrity = "sha256-N2uozHYBpLezGfMonJSEmFdXD39wBEctM4f0HYJGZIA=",
#     strip_prefix = "rules_haskell-d1d324d448824d90b7d45973658a05ed086f9217",
#     urls = ["https://github.com/tweag/rules_haskell/archive/d1d324d448824d90b7d45973658a05ed086f9217.zip"],
# )

local_path_override(
    module_name = "toolchains_llvm",
    path = "../com_github_bazel_contrib_toolchains_llvm",
)

local_path_override(
    module_name = "rules_haskell",
    path = "../com_github_tweag_rules_haskell",
)

archive_override(
    module_name = "rules_perl",
    integrity = "sha256-OBsgaX5Gr5PhMUlqqggV0cWk/AB/NxJCMScMjFMnlmo=",
    strip_prefix = "rules_perl-2144f43cf7e68fa3a95a0d5524c5124513493b39",
    urls = ["https://github.com/bazel-contrib/rules_perl/archive/2144f43cf7e68fa3a95a0d5524c5124513493b39.zip"],
)

## Includes

include("//projects/android_launcher:deps.MODULE.bazel")
include("//projects/nexus_security_plugin:deps.MODULE.bazel")
include("//projects/ansible_collection:deps.MODULE.bazel")
include("//projects/alwaldend.com:deps.MODULE.bazel")
include("//tools/kt:deps.MODULE.bazel")
include("//tools/oci:deps.MODULE.bazel")
include("//tools/helm:deps.MODULE.bazel")
include("//tools/haskell:deps.MODULE.bazel")
include("//tools/cc:deps.MODULE.bazel")
include("//tools/pl:deps.MODULE.bazel")
include("//tools/js:deps.MODULE.bazel")
include("//tools/py:deps.MODULE.bazel")
include("//tools/shellcheck:deps.MODULE.bazel")
include("//tools/go:deps.MODULE.bazel")
include("//tools/android:deps.MODULE.bazel")
include("//tools/rs:deps.MODULE.bazel")
include("//tools/git:deps.MODULE.bazel")
include("//tools/qt:deps.MODULE.bazel")
include("//tools/drawio:deps.MODULE.bazel")
include("//tools/rfc:deps.MODULE.bazel")
include("//tools/buf:deps.MODULE.bazel")
include("//tools/taplo:deps.MODULE.bazel")
include("//tools/bazel_contracts:deps.MODULE.bazel")
include("//tools/minisign:deps.MODULE.bazel")
include("//tools/dnscontrol:deps.MODULE.bazel")
include("//tools/trufflehog:deps.MODULE.bazel")
include("//tools/oras:deps.MODULE.bazel")
include("//tools/blender:deps.MODULE.bazel")
include("//tools/word_lists:deps.MODULE.bazel")
