module(
    name = "com_alwaldend_src",
    version = "0.0.0",
    bazel_compatibility = [">=8.5.1"],
)

# Third party
include("//third_party:include.MODULE.bazel")
include("//third_party/org_nmap_nmap:include.MODULE.bazel")
include("//third_party/org_kernel_headers:include.MODULE.bazel")
include("//third_party/com_github_bazelbuild_bazel_protobuf:include.MODULE.bazel")
include("//third_party/us_nasm_nasm:include.MODULE.bazel")
include("//third_party/com_github_georgewfraser_java_language_server:include.MODULE.bazel")
include("//third_party/org_openssl_openssl:include.MODULE.bazel")
include("//third_party/io_kubernetes_kubectl:include.MODULE.bazel")
include("//third_party/net_zlib_zlib:include.MODULE.bazel")
include("//third_party/org_pcre_pcre2:include.MODULE.bazel")
include("//third_party/ai_opencode_opencode:include.MODULE.bazel")
include("//third_party/io_traefik_traefik:include.MODULE.bazel")
include("//third_party/org_codeberg_forgejo:include.MODULE.bazel")
include("//third_party/org_codeberg_forgejo_bin:include.MODULE.bazel")
include("//third_party/org_codeberg_forgejo_contrib_forgejo_cli_bin:include.MODULE.bazel")
include("//third_party/io_goharbor_offline_installer:include.MODULE.bazel")
include("//third_party/io_goharbor_harbor_cli:include.MODULE.bazel")
include("//third_party/com_drawio_desktop_bin:include.MODULE.bazel")
include("//third_party/io_docker_library_alpine:include.MODULE.bazel")
include("//third_party/com_nanovms_ops:include.MODULE.bazel")
include("//third_party/io_k3s_k3s:include.MODULE.bazel")
include("//third_party/io_controlplane_flux_operator:include.MODULE.bazel")
include("//third_party/io_fluxcd_flux:include.MODULE.bazel")
include("//third_party/io_cert_manager_cmctl:include.MODULE.bazel")
include("//third_party/io_getsops_sops:include.MODULE.bazel")
include("//third_party/sh_helm_helm:include.MODULE.bazel")
include("//third_party/io_goharbor_helm_harbor:include.MODULE.bazel")
include("//third_party/org_fedora_cloud:include.MODULE.bazel")

# Tools
include("//tools:include.MODULE.bazel")
include("//tools/kt:include.MODULE.bazel")
include("//tools/helm:include.MODULE.bazel")
include("//tools/cc:include.MODULE.bazel")
include("//tools/js:include.MODULE.bazel")
include("//tools/py:include.MODULE.bazel")
include("//tools/go:include.MODULE.bazel")
include("//tools/android:include.MODULE.bazel")
include("//tools/git:include.MODULE.bazel")
include("//tools/qt:include.MODULE.bazel")
include("//tools/drawio:include.MODULE.bazel")
include("//tools/rfc:include.MODULE.bazel")
include("//tools/word_lists:include.MODULE.bazel")
include("//tools/gitea:include.MODULE.bazel")
include("//tools/consul:include.MODULE.bazel")
include("//tools/vault:include.MODULE.bazel")
include("//tools/trufflehog:include.MODULE.bazel")
include("//tools/buf:include.MODULE.bazel")
include("//tools/android_cmdtools:include.MODULE.bazel")
include("//tools/rclone:include.MODULE.bazel")
include("//tools/terraform:include.MODULE.bazel")
include("//tools/oras:include.MODULE.bazel")
include("//tools/minisign:include.MODULE.bazel")
include("//tools/blender:include.MODULE.bazel")
include("//tools/dnscontrol:include.MODULE.bazel")
include("//tools/shellcheck:include.MODULE.bazel")
include("//tools/cloc:include.MODULE.bazel")
include("//tools/stylua:include.MODULE.bazel")
include("//tools/taplo:include.MODULE.bazel")
include("//tools/hugo:include.MODULE.bazel")
include("//tools/bao:include.MODULE.bazel")
include("//tools/shfmt:include.MODULE.bazel")

# Projects
include("//projects/android_launcher:include.MODULE.bazel")
include("//projects/nexus_security_plugin:include.MODULE.bazel")
include("//projects/ansible_collection:include.MODULE.bazel")
include("//projects/alwaldend.com:include.MODULE.bazel")
include("//projects/al:include.MODULE.bazel")
