repo(
    default_package_metadata = [
        "//tools/license:repo_license",
    ],
    default_visibility = ["//visibility:private"],
)

ignore_directories(
    [
        "projects/bazel_registry/main/registry/modules/*/*/overlay",
        "**/bazel-*",
        "**/external",
        "**/node_modules",
        "**/compile_commands.json",
        "**/out",
        "**/.git",
        "**/.bzlenv",
        "**/.aspect",
        "**/.cache",
        "**/.venv"
    ],
)
