repo(
    default_package_metadata = [
        "//data/license:default",
    ],
    default_visibility = ["//visibility:private"],
)

ignore_directories(
    [
        "projects/bazel_registry/main/registry/modules/*/*/overlay",
        "**/bazel-*",
        "**/external",
        "**/node_modules",
        "**/compile_commands.json",
        "**/out",
        "**/.bzlenv",
        "**/.aspect",
        "**/.cache",
        "**/.venv"
    ],
)
