repo(
    default_package_metadata = [
        "//data/license:default",
    ],
    default_visibility = ["//visibility:private"],
)

ignore_directories(
    [
        "**/bazel-*",
        "**/external",
        "**/node_modules",
        "**/compile_commands.json",
        "**/out",
        "**/.bzlenv",
        "**/.aspect",
        "**/.cache",
        "**/.venv"
    ],
)
