load("//bzl/macros:al_bzl_target_doc.bzl", "al_bzl_target_doc")
load("//bzl/macros:al_readme.bzl", "al_readme")

al_readme(
    name = "readme",
    srcs = ["_index.md"],
    visibility = ["//visibility:public"],
)

al_bzl_target_doc(
    name = "bzl-target-doc",
    visibility = ["//visibility:public"],
)
