load("//bzl/rules/ansible:al_ansible_binary.bzl", "al_ansible_binary")
load("//bzl/rules/bzl:al_bzl_target_doc.bzl", "al_bzl_target_doc")
load("//bzl/rules/git:al_git_changelog.bzl", "al_git_changelog")
load("//bzl/rules/readme:al_readme.bzl", "al_readme")

al_ansible_binary(
    name = "ansible_playbook",
    arguments = [
        "--inventory",
        "inventory.yaml",
    ],
    process_name = "ansible_playbook",
    symlink_archives = {
        "collections/ansible_collections": "//ansible/collections",
        "host_vars": "//ansible/host_vars",
        "group_vars": "//ansible/group_vars",
    },
    symlink_files = {
        "ansible.cfg": ":config",
        "inventory.yaml": ":inventory",
    },
)

al_readme(
    name = "readme",
    visibility = ["//visibility:public"],
)

al_git_changelog(
    name = "changelog",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "inventory",
    srcs = ["inventory.yaml"],
)

filegroup(
    name = "config",
    srcs = ["ansible.cfg"],
)

al_bzl_target_doc(
    name = "bazel_target_doc",
    visibility = ["//visibility:public"],
)
