load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")
load("//bzl/rules/ansible:al_ansible_binary.bzl", "al_ansible_binary")
load("//bzl/rules/bzl:al_bzl_target_doc.bzl", "al_bzl_target_doc")
load("//bzl/rules/git:al_git_changelog.bzl", "al_git_changelog")
load("//bzl/rules/readme:al_readme.bzl", "al_readme")

al_ansible_binary(
    name = "ansible_playbook",
    arguments = [
        "--inventory",
        "inventory.yaml",
    ],
    process_name = "ansible_playbook",
    symlinks = [
        ":srcs",
        "//ansible/collections",
    ],
)

al_readme(
    name = "readme",
    visibility = ["//visibility:public"],
)

al_git_changelog(
    name = "changelog",
    visibility = ["//visibility:public"],
)

pkg_filegroup(
    name = "srcs",
    srcs = [
        ":config",
        ":inventory",
        "//ansible/group_vars",
        "//ansible/host_vars",
    ],
)

pkg_files(
    name = "inventory",
    srcs = ["inventory.yaml"],
)

pkg_files(
    name = "config",
    srcs = ["ansible.cfg"],
)

al_bzl_target_doc(
    name = "bazel_target_doc",
    visibility = ["//visibility:public"],
)
