load("//bzl/macros:al_gen_changelog.bzl", "al_gen_changelog")
load("//bzl/rules/bzl:al_bzl_library_map.bzl", "al_bzl_library_map")
load("//bzl/rules/bzl:al_bzl_target_doc.bzl", "al_bzl_target_doc")
load("//bzl/rules/readme:al_readme.bzl", "al_readme")

_BZL_LIBS = subpackages(
    include = ["*"],
    exclude = [
        "build_files",
        "registry",
        "configs",
    ],
)

al_readme(
    name = "readme",
    visibility = ["//visibility:public"],
)

al_gen_changelog(
    name = "changelog",
    visibility = ["//visibility:public"],
)

al_bzl_library_map(
    name = "libs",
    visibility = ["//visibility:public"],
    deps = ["//bzl/{}:{}".format(package, "libs") for package in _BZL_LIBS],
)

al_bzl_target_doc(
    name = "bazel_target_doc",
    visibility = ["//visibility:public"],
)
