load("//bzl/macros:al_bzl_target_doc.bzl", "al_bzl_target_doc")
load("//bzl/macros:al_gen_changelog.bzl", "al_gen_changelog")
load("//bzl/macros:al_readme.bzl", "al_readme")

al_readme(
    name = "readme",
    visibility = ["//visibility:public"],
)

al_gen_changelog(
    name = "changelog",
    visibility = ["//visibility:public"],
)

alias(
    name = "dnscontrol",
    actual = "//tools:dnscontrol",
)

al_bzl_target_doc(
    name = "bzl-target-doc",
    visibility = ["//visibility:public"],
)
