load("//bzl/rules/bzl:al_bzl_target_doc.bzl", "al_bzl_target_doc")
load("//bzl/rules/git:al_git_changelog.bzl", "al_git_changelog")
load("//bzl/rules/readme:al_readme.bzl", "al_readme")

al_readme(
    name = "readme",
    visibility = ["//visibility:public"],
)

al_git_changelog(
    name = "changelog",
    visibility = ["//visibility:public"],
)

alias(
    name = "dnscontrol",
    actual = "//tools:dnscontrol",
)

al_bzl_target_doc(
    name = "bazel_target_doc",
    visibility = ["//visibility:public"],
)
