load("//bzl/rules/bzl:al_bzl_target_doc.bzl", "al_bzl_target_doc")
load("//bzl/rules/git:al_git_changelog.bzl", "al_git_changelog")
load("//bzl/rules/helm:al_helm_binary.bzl", "al_helm_binary")

al_helm_binary(
    name = "helm",
    cd = "${BUILD_WORKING_DIRECTORY}",
    visibility = ["//visibility:public"],
)

al_git_changelog(
    name = "changelog",
    visibility = ["//visibility:public"],
)

al_bzl_target_doc(
    name = "bazel_target_doc",
    visibility = ["//visibility:public"],
)
